p2/confs/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: app-two-volume
            mountPath: /usr/share/nginx/html
      volumes:
      - name: app-two-volume
        hostPath:
          path: /vagrant/index/app2
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
