p2/confs/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: app-three-volume
            mountPath: /usr/share/nginx/html
      volumes:
      - name: app-three-volume
        hostPath:
          path: /vagrant/index/app3
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
